2001-07-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Update date/time designations to arrays
	* Source/NSDate.m: Update to use date/time designation arrays.
2001-07-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/objc-load.m: Remove bogus include of objc-load.h
	on non-NeXT systems.

2001-07-09  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for pthread.h - for compiling on Darwin.
	* Source/GNUmakefile: Compile thr-pthread.m conditionally.
	* Source/thr-pthread.m: New file.

	* Source/null-load.h (__objc_dynamic_get_symbol_path): New def.
	* Source/objc-load.m: Use NeXT load methods on Darwin.

2001-07-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: NSSearchPathForDirectoriesInDomains() Set up
	default values if environment variables are missing.
	Use common code for getting path prefixes and search directories.

2001-07-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: readContentsOfFile() hack added to permit reading
	of files like those in the /proc filesystem which don't support
	lengths.
	* Source/NSString.m: ([-initWithFormat:locale:]) use dummy local
	variable to try to get compilation to work on alpha ... untested
	as I don't have an alpha system.

2001-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Never init nocopy with null pointer - increase
	chance of double initialisation being detected.

2001-06-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/callframe.m: callframe_do_call_opts(),
	callframe_build_return_opts() fixed memory leaks.
	Performance improvements -
	callframe_from_info() use a single malloc to allocate memory for
	the entire callframe. callframe_free() use a single free()
	* Source/NSConnection.m: Wait only 0.1 millisecond for first try
	checking for events ... CPUs are getting faster.
	* Source/NSTimer.m: Set minimum timer to 0.1 milliseconds ...

2001-06-26  Adam Fedor  <fedor@gnu.org>
