@@ -1,7 +1,13 @@
+2001-07-11  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSFileManager.m: ([fileSystemRepresentationWithPath:])
+	MINGW fix contributed by Michael Scheibler
+
 2001-07-10  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSUserDefaults.m: Update date/time designations to arrays
 	* Source/NSDate.m: Update to use date/time designation arrays.
+
 2001-07-09  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/objc-load.m: Remove bogus include of objc-load.h
